# bncc-db

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  code-analysis.yml  code-quality.yml  main.yaml  main.yml
tests/: test_ci.py
