[tool.poetry]
name = "bncc-db"
version = "0.1.0"
description = "Database with structured data from the Base Nacional Comum Curricular (BNCC)"
authors = ["Sumé Solutions <hi@sumesolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "F", #Pyflakes
    "B", #flake8-bugbear
    "A", #flake8-builtins 
    "C4", #flake8-comprehensions
    "ERA", #eradicate
    "I", #isort
    "PT", #flake8-pytest-style
    "C90", #mccabe
    "N", #pep8-naming
    "E", #pycodestyle error
    "PL" #Pylint
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf pre-commit install "